--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,9 +11,14 @@
  *= require_self
  *= require_tree .
 */
+@import "bootstrap";
+
+img {
+float: left;
+}
 
 
-#banner {
+/*#banner {
 background: #9c9;
 padding: 10px;
 border-bottom: 2px solid;
@@ -63,4 +68,4 @@ font-size: small;
 }
 }
 }
-}
+}*/
