--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,27 +7,57 @@
   <%= csrf_meta_tags %>
 </head>
 <body class='<%= controller.controller_name %>' >
-	<div id="banner">
-		<%= image_tag("logo.png") %>
-		<%= @page_title || "Pragmatic Bookshelf" %>
+<!-- Header ============================================================================ -->
+	<div class="navbar">
+  	<div class="navbar-inner">
+    	<div class="container">
+    		<a class="brand pull-left" href="#">
+  				<%= image_tag("logo.png") %>
+  				<%= @page_title || "Pragmatic Bookshelf" %>
+				</a>
+    		<ul class="nav pull-right">
+					<li> <a href="http://www...." >Home</a> </li>
+						<li class="divider-vertical"></li>
+					<li> <a href="http://www..../faq" >Questions</a> </li>
+						<li class="divider-vertical"></li>
+					<li> <a href="http://www..../news" >News</a> </li>
+						<li class="divider-vertical"></li>
+					<li> <a href="http://www..../contact" >Contact</a> </li>
+				</ul>
+  		</div>
+  	</div>
+  </div>
+
+<!-- Sidebar ============================================================================-->
+	<div class="container-fluid">
+		<div class="row-fluid">
+    	<div class="span2">
+      	<!--Sidebar content-->
+      	<ul class="nav nav-tabs nav-stacked">
+					<li> <a href="http://www...." >Home</a> </li>
+						<li class="divider-vertical"></li>
+					<li> <a href="http://www..../faq" >Questions</a> </li>
+						<li class="divider-vertical"></li>
+					<li> <a href="http://www..../news" >News</a> </li>
+						<li class="divider-vertical"></li>
+					<li> <a href="http://www..../contact" >Contact</a> </li>
+				</ul>
+    	</div>
+
+<!-- Body ============================================================================  -->    
+    	<div class="span10">
+	      <!--Body content-->
+	      <%= yield %>
+	    </div>
+	  </div>
 	</div>
 
-	<div id="columns">
-		<div id="side">
-			<ul>
-				<li> <a href="http://www...." >Home</a> </li>
-				<li> <a href="http://www..../faq" >Questions</a> </li>
-				<li> <a href="http://www..../news" >News</a> </li>
-				<li> <a href="http://www..../contact" >Contact</a> </li>
-			</ul>	
-		</div>
 
-		<div id="main">
-			<%= yield %>
-		</div>
-
-
-	</div>
+<!-- Footer ============================================================================ -->
+<footer>
+<hr>
+<h4 class="pull-right">copyright...little Maddie Dog</h4>
+</footer>
 
 
 </body>
