--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -4,8 +4,9 @@
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
 
       <ul>
-      <% @product.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+      <% @product.errors.full_messages.each do |msg| %> 
+            <li><%= msg %></li>
+        </div>
       <% end %>
       </ul>
     </div>
@@ -27,7 +28,7 @@
     <%= f.label :price %><br />
     <%= f.text_field :price %>
   </div>
-  <div class="actions">
+  <div class="">
     <%= f.submit %>
   </div>
 <% end %>
