--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', products_path %>
+<div class="btn-group">
+	<%= link_to 'Back', products_path, class: "btn" %>
+</div>
